Add cycle port and remove shell
