# src/swagger.yaml
@@ -67,7 +67,19 @@ paths:
           description: "Success"
           schema:
             $ref: "#/definitions/Port"
-        
+  /port/cycle:
+    x-swagger-router-controller: PortController
+    post:
+      tags:
+        - Port
+      operationId: cyclePort
+      summary: "Releases and re-grabs the port fs handle."
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Port"
+  
   /position:
     x-swagger-router-controller: PositionController
     get:
